--- a/blog/app/assets/stylesheets/welcome.scss
+++ b/blog/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,28 @@
-// Place all the styles related to the Welcome controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background-color: #fff;
+  color: #333;
+  margin: 33px;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+
+}
+
+h1{
+ text-align: center;
+
+}
+
+ h2 {
+    text-align: center;
+    font-weight: bold;
+    padding: 5px 5px 5px 15px;
+    font-size: 16px;
+    margin: -7px -7px 0;
+    background-color: #FFFF00;
+    color: black;
+  }
+
+  h3{
+    text-align: center;
+  }
