--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Welcome To Thought Drop!</h1>
 <h2>The App Designed to Help you Store Your Invaluable Thoughts!!!</h2>
+<%= link_to 'Proceed To TD Collection', controller: 'thoughts' %>
 <h3>Designed with Ruby on Rails</h3>
 <h3>Designed by Zahra A.
 
