--- a/blog/app/views/thoughts/edit.html.erb
+++ b/blog/app/views/thoughts/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Formulate A New Thought Drop</h1>
-
+<h1>Edit Thoughts</h1>
+  
 <%= render 'form' %>
- 
+  
 <%= link_to 'Back', thoughts_path %>
