--- a/blog/app/views/thoughts/show.html.erb
+++ b/blog/app/views/thoughts/show.html.erb
@@ -1,3 +1,4 @@
+
 <p>
   <strong>Title:</strong>
   <%= @thought.title %>
@@ -7,7 +8,13 @@
   <strong>Text:</strong>
   <%= @thought.text %>
 </p>
-
+ 
+<h2>Comments</h2>
+<%= render @thought.comments %>
+ 
+<h2>Add a comment:</h2>
+<%= render 'comments/form' %>
+ 
 <%= link_to 'Edit', edit_thought_path(@thought) %> |
 <%= link_to 'Back', thoughts_path %>
 
