--- a/blog/app/views/comments/_comment.html.erb
+++ b/blog/app/views/comments/_comment.html.erb
@@ -7,4 +7,9 @@
   <strong>Comment:</strong>
   <%= comment.body %>
 </p>
-
+ 
+<p>
+  <%= link_to 'Destroy Comment', [comment.thought, comment],
+               method: :delete,
+               data: { confirm: 'Are you sure?' } %>
+</p>
