--- a/blog/app/assets/stylesheets/thoughts.scss
+++ b/blog/app/assets/stylesheets/thoughts.scss
@@ -1,3 +1,109 @@
 // Place all the styles related to the Thoughts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+H1 for Thoughts
+.h1_new{
+ text-align: Center;
+ color: blue;
+}
+
+//Style for table on thought page.
+td{
+ background: rgba(yellow,0.7)
+ 
+}
+
+
+.welcome-header{
+ text-align: Center;
+ color: blue;
+//  background-color: white;
+
+}
+
+ h2 {
+    text-align: center;
+    // font-weight: bold;
+    // padding: 5px 5px 5px 15px;
+    // font-size: 16px;
+    // margin: -7px -7px 0;
+    // background-color: #FFFF00;
+    // color: black;
+  }
+
+  h3{
+    text-align: center;
+
+  }
+
+ td a {
+
+  color: black;
+  background: white;
+  text-decoration:none;
+  
+ }
+
+
+// .hero-section {
+//   background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
+//   background-size: cover;
+//   background: rbga(black,0.2);
+//   height: 40vh;
+//   text-align: center;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//     //  font-size: 40px;
+//     // color:black;
+//     font-weight:bolder;
+ 
+
+//  .hero-section-text {
+//    color: rgba(yellow,0.7 );
+//    text-shadow: 1px 1px 2px black;
+//    font-size: 50px;
+//    text-align: center;
+//  }
+//  }
+
+// .welcome-page-h2 {
+//   margin: 60px 10px 30px 10px;
+//   font-size:25px;
+// }
+
+
+
+// Desktop version of app Welcome Thoughts Page 
+
+// .hero-section {
+//   background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
+//   background-color:black;
+//   background-size: cover;
+//   background: rbga(black,0.2);
+//   height: 40vh;
+//   text-align: center;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//     //  font-size: 40px;
+//     // color:black;
+//     font-weight:bolder;
+// }
+
+
+
+// .hero-section-text {
+//    color: white;
+//    text-shadow: 1px 1px 2px black;
+//    font-size: 50px;
+//    text-align: center;
+//  }
+ 
+
+
+// .welcome-page-h2 {
+//   margin: 60px 10px 60px 10px;
+//   font-size:25px;
+// }
