--- a/blog/app/assets/stylesheets/welcome.scss
+++ b/blog/app/assets/stylesheets/welcome.scss
@@ -1,28 +1,83 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
 
+.hero-section {
+  background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
+  background-size: cover;
+  background: rbga(black,0.2);
+  height: 40vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+    //  font-size: 40px;
+    // color:black;
+    font-weight:bolder;
+    //hero text style
+     color: rgba(yellow,0.7 );
+   text-shadow: 1px 1px 2px black;
+   font-size: 50px;
+   text-align: center;
 }
 
-h1{
- text-align: center;
+//  .hero-section-text {
+//    color: rgba(yellow,0.7 );
+//    text-shadow: 1px 1px 2px black;
+//    font-size: 50px;
+//    text-align: center;
+//  }
+//  }
 
+.welcome-page-h2 {
+  margin: 60px 10px 30px 10px;
+  font-size:25px;
 }
 
- h2 {
-    text-align: center;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 16px;
-    margin: -7px -7px 0;
-    background-color: #FFFF00;
-    color: black;
-  }
+.welcome-page-designed-by{
+  margin: 60px 10px 30px 10px;
+  font-size:25px;
+  background: lightgray;
+}
 
-  h3{
-    text-align: center;
-  }
+
+.footer{
+   background-size: cover;
+  background: darkgray;
+  height: 20vh;
+}
+
+
+
+// Desktop version of app Welcome Thoughts Page 
+
+// .hero-section {
+//   background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
+//   background-color:black;
+//   background-size: cover;
+//   background: rbga(black,0.2);
+//   height: 40vh;
+//   text-align: center;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//     //  font-size: 40px;
+//     // color:black;
+//     font-weight:bolder;
+// }
+
+
+
+// .hero-section-text {
+//    color: white;
+//    text-shadow: 1px 1px 2px black;
+//    font-size: 50px;
+//    text-align: center;
+//  }
+ 
+
+
+// .welcome-page-h2 {
+//   margin: 60px 10px 60px 10px;
+//   font-size:25px;
+// }
+
+  
+
