--- a/blog/app/views/comments/_comment.html.erb
+++ b/blog/app/views/comments/_comment.html.erb
@@ -1,3 +1,5 @@
+
+<div class="div_for_comments"> 
 <p>
   <strong>Commenter:</strong>
   <%= comment.commenter %>
@@ -7,6 +9,7 @@
   <strong>Comment:</strong>
   <%= comment.body %>
 </p>
+</div>
  
 <p>
   <%= link_to 'Destroy Comment', [comment.thought, comment],
