--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Welcome To Thought Drop!</h1>
-<h2>The App Designed to Help you Store Your Invaluable Thoughts!!!</h2>
-<%= link_to 'Proceed To TD Collection', controller: 'thoughts' %>
-<h3>Designed with Ruby on Rails</h3>
-<h3>Designed by Zahra A.
-
+<h1  class="hero-section">Welcome To Thought Drop</h1>
+<p class="welcome-page-h2">The App Designed to Help you Store Your Invaluable Thoughts!!!</p>
+<%=  link_to 'Proceed To TD Collection', controller: 'thoughts' %>
+<section class="welcome-page-designed-by">Designed with Ruby on Rails</section>
+<div class="welcome-page-designed-by">Designed by Zahra A.</div>
+<div class="footer"> </div>
 
