Added more style to app, need to fix wave issues.

--- a/blog/app/assets/stylesheets/application.css
+++ b/blog/app/assets/stylesheets/application.css
@@ -14,11 +14,6 @@
  *= require_self
  */
 
-/*.btn{
-  color: green;
-}*/
-
-
 
 body{
   /*background:yellow;*/
@@ -28,56 +23,68 @@ body{
   /*background-image: url('http://i.imgur.com/A05XfB0.png')*/
 }
 
+ /*Buttons on table.*/
+
  td a {
 
-   background: #551A8B;
-  background-image: -webkit-linear-gradient(top, #551A8B, #2980b9);
-  background-image: -moz-linear-gradient(top, #551A8B, #2980b9);
-  background-image: -ms-linear-gradient(top, #551A8B, #2980b9);
-  background-image: -o-linear-gradient(top, #551A8B, #2980b9);
-  background-image: linear-gradient(to bottom, #551A8B, #2980b9);
+background: #dbd7db;
+  background-image: -webkit-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: -moz-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: -ms-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: -o-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: linear-gradient(to bottom, #dbd7db, #a6a6a6);
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
   font-family: Georgia;
-  color: #ffffff;
+  color: black;
   font-size: 14px;
-  padding: 3px 5px 3px 5px;
-  border: solid #551A8B 2px;
+  /*padding: 3px 5px 3px 5px;*/
+  /*padding: 10px 20px 10px 20px;*/
+   padding: 3px 5px 3px 5px;
   text-decoration: none;
-  
  }
 
 
  td{
-  padding: 10px;
+  padding: 20px 10px;
  }
 
+
+ /*The a tags controls links to the flow through different pages*/
+ /*I used css generator for the perfect buttons.*/
+
  a{
-   background: #551A8B;
-  background-image: -webkit-linear-gradient(top, black);
-  background-image: -moz-linear-gradient(top, #551A8B, #2980b9);
-  background-image: -ms-linear-gradient(top, #551A8B, #2980b9, #FFFF00);
-  background-image: -o-linear-gradient(top, #551A8B, #2980b9);
-  background-image: linear-gradient(to bottom, #551A8B, #2980b9,#FFFF00);
+  background: #dbd7db;
+  background-image: -webkit-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: -moz-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: -ms-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: -o-linear-gradient(top, #dbd7db, #a6a6a6);
+  background-image: linear-gradient(to bottom, #dbd7db, #a6a6a6);
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
   font-family: Georgia;
-  color: #ffffff;
-  font-size: 14px;
-  padding: 3px 5px 3px 5px;
-  border: solid #551A8B 2px;
+  color: black;
+  font-size: 16px;
+  /*padding: 3px 5px 3px 5px;*/
+  /*padding: 10px 20px 10px 20px;*/
+   padding: 6px 5px 6px 5px;
   text-decoration: none;
 
  }
 
  
+ /*This is for the table on thoughts page, it has to be in application.css folder to work*/
 table{
  
 display: flex;
 justify-content: center;
 padding-top:10px;
+/*padding-top: 20px;
+padding-bottom: 20px; */
+margin-top: 20px;
+margin-bottom: 20px; 
 
 }
 
@@ -90,31 +97,10 @@ padding-top:10px;
 .div_for_comments
 
 {
-  background: yellow;
-  width:80%;
+  /*background: yellow;*/
+  /*background-image:url('http://i.imgur.com/66Btqmc.png') ;*/
+  /*width:80%;
   margin: 0 auto ;
-  border-radius: 10%;
+  border-radius: 10%;*/
  }
 
-/*
-  .hero-section {
-  background: url("https://static.pexels.com/photos/248064/pexels-photo-248064.jpeg") 50% no-repeat;
-  background-size: cover;
-  height: 60vh;
-  text-align: center;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.hero-section .hero-section-text {
-  color: #fefefe;
-  text-shadow: 1px 1px 2px #0a0a0a;
-}
-*/
