--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h1  class="hero-section">Welcome To Thought Drop</h1>
+<div class="hero-section"><h1 class="hero-section-h1">Welcome To Thought Drop</h1></div>
 <p class="welcome-page-h2">The App Designed to Help you Store Your Invaluable Thoughts!!!</p>
 <%=  link_to 'Proceed To TD Collection', controller: 'thoughts' %>
 <section class="welcome-page-designed-by">Designed with Ruby on Rails</section>
