--- a/blog/app/assets/stylesheets/thoughts.scss
+++ b/blog/app/assets/stylesheets/thoughts.scss
@@ -2,16 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-H1 for Thoughts
-.h1_new{
- text-align: Center;
- color: blue;
-}
+
+// H1 for Thoughts
+// .h1_new{
+//  text-align: Center;
+//  color: blue;
+// }
 
 //Style for table on thought page.
 td{
- background: rgba(yellow,0.7)
- 
+//  background: rgba(black,0.7)
+background: grey;
+color: black; 
+// margin-top: 20px;
+// margin-bottom: 20px; 
 }
 
 
@@ -45,65 +49,17 @@ td{
   
  }
 
+//Show from heading 
+.add-a-comment{
+  font-size:30px;
+  padding-top: 15px;
+}
 
-// .hero-section {
-//   background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
-//   background-size: cover;
-//   background: rbga(black,0.2);
-//   height: 40vh;
-//   text-align: center;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//     //  font-size: 40px;
-//     // color:black;
-//     font-weight:bolder;
- 
+//Form one sees on the comment page once show button is pushed. 
+.show-form{
+  background-color: black;
+  color: white;
+  height: 40vh;
+  font-size:20px;
+}
 
-//  .hero-section-text {
-//    color: rgba(yellow,0.7 );
-//    text-shadow: 1px 1px 2px black;
-//    font-size: 50px;
-//    text-align: center;
-//  }
-//  }
-
-// .welcome-page-h2 {
-//   margin: 60px 10px 30px 10px;
-//   font-size:25px;
-// }
-
-
-
-// Desktop version of app Welcome Thoughts Page 
-
-// .hero-section {
-//   background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
-//   background-color:black;
-//   background-size: cover;
-//   background: rbga(black,0.2);
-//   height: 40vh;
-//   text-align: center;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//     //  font-size: 40px;
-//     // color:black;
-//     font-weight:bolder;
-// }
-
-
-
-// .hero-section-text {
-//    color: white;
-//    text-shadow: 1px 1px 2px black;
-//    font-size: 50px;
-//    text-align: center;
-//  }
- 
-
-
-// .welcome-page-h2 {
-//   margin: 60px 10px 60px 10px;
-//   font-size:25px;
-// }
