--- a/blog/app/assets/stylesheets/welcome.scss
+++ b/blog/app/assets/stylesheets/welcome.scss
@@ -1,6 +1,54 @@
 
+//Moiblie version of thought drop
+// Public Domain Image from Pexel.com pexels.com/photo/newspaper-origami-40906/
+
+// .hero-section {
+//   background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
+//   background-size: cover;
+//   background: rbga(black,0.2);
+//   height: 40vh;
+//   text-align: center;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   font-size: 40px;
+  // color:black;
+ 
+
+//style for hero texthero text style;
+  //  font-weight:bolder;
+  //  color:gray;
+  //  color: rgba(yellow,0.7 );
+//    text-shadow: 1px 1px 2px black;
+//    font-size: 50px;
+//    text-align: center;
+// }
+
+// .welcome-page-h2 {
+//   margin: 60px 10px 30px 10px;
+//   font-size:25px;
+// }
+
+// .welcome-page-designed-by{
+//   margin: 60px 10px 30px 10px;
+//   font-size:23px;
+// }
+
+
+// .footer{
+//    background-size: cover;
+//   background: darkgray;
+//   height: 20vh;
+// }
+
+
+
+// Desktop version of app Welcome Thoughts Page 
+
 .hero-section {
-  background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
+  // background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
+
+  background-color:black;
   background-size: cover;
   background: rbga(black,0.2);
   height: 40vh;
@@ -8,33 +56,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
-    //  font-size: 40px;
-    // color:black;
-    font-weight:bolder;
-    //hero text style
-     color: rgba(yellow,0.7 );
+   font-weight:bolder;
+   color: white;
    text-shadow: 1px 1px 2px black;
-   font-size: 50px;
+  //  font-size: 40px;
    text-align: center;
 }
 
-//  .hero-section-text {
-//    color: rgba(yellow,0.7 );
-//    text-shadow: 1px 1px 2px black;
-//    font-size: 50px;
-//    text-align: center;
-//  }
-//  }
+.hero-section-h1 {
+    font-size: 45px;
+}
+
 
 .welcome-page-h2 {
-  margin: 60px 10px 30px 10px;
+  margin: 60px 10px 60px 10px;
   font-size:25px;
 }
 
+  
 .welcome-page-designed-by{
   margin: 60px 10px 30px 10px;
-  font-size:25px;
-  background: lightgray;
+  font-size:23px;
 }
 
 
@@ -43,41 +85,4 @@
   background: darkgray;
   height: 20vh;
 }
-
-
-
-// Desktop version of app Welcome Thoughts Page 
-
-// .hero-section {
-//   background:url('https://static.pexels.com/photos/40906/art-attachment-background-boat-40906.jpeg') 50% no-repeat;
-//   background-color:black;
-//   background-size: cover;
-//   background: rbga(black,0.2);
-//   height: 40vh;
-//   text-align: center;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//     //  font-size: 40px;
-//     // color:black;
-//     font-weight:bolder;
-// }
-
-
-
-// .hero-section-text {
-//    color: white;
-//    text-shadow: 1px 1px 2px black;
-//    font-size: 50px;
-//    text-align: center;
-//  }
- 
-
-
-// .welcome-page-h2 {
-//   margin: 60px 10px 60px 10px;
-//   font-size:25px;
-// }
-
-  
 
